@@ -1,3 +1,9 @@
+2016-06-22  Per Bothner  <per@bothner.com>
+
+	* KawaServlet.java (doGet): Simplify handling of setting Context.
+	Don't try to re-use existing old context.  I don't remember what
+	problem this caused, but the current code is at least cleaner.
+
 2015-02-19  Per Bothner  <per@bothner.com>
 
 	* KawaServlet.java (getInstanceOrNull): New static method.
